enabled weixin qrcode

--- a/src/app/floating-bar/floating-bar.component.html
+++ b/src/app/floating-bar/floating-bar.component.html
@@ -1,6 +1,8 @@
 <div class="tools d-none d-sm-block">
   <div class="btn-group-vertical">
-    <a type="button" class="btn btn-outline-secondary " title="微信聊天">
+    <a type="button" class="btn btn-outline-secondary " title="微信聊天"
+    data-toggle="tooltip" data-placement="left" data-html="true" title="{{weixinTooltip}}"
+    >
       <fa-icon class="text-success" [icon]="faWeixin"></fa-icon>
     </a>
     <a type="button" class="btn btn-outline-secondary" title="QQ聊天">
