enabled intro fetching

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
     <div>
       <div id="particles-js"></div>
     </div>
-    <div class="intro">
+    <div class="intro" *ngIf="intro">
       <h1 class="display-4">{{ "WELCOME" | translate }}</h1>
       <hr class="my-4" />
       <div class="container">
