add loading notice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header>Loading(加载中)....</app-header>
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="collapse navbar-collapse nav-right" id="navbarSupportedContent">
@@ -64,6 +64,6 @@
     </div>
   </div>
 </div>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
-<app-floating-bar></app-floating-bar>
+<router-outlet>Loading(加载中)....</router-outlet>
+<app-footer>Loading(加载中)....</app-footer>
+<app-floating-bar>Loading(加载中)....</app-floating-bar>
