removed loading from  router-outlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,6 +64,6 @@
     </div>
   </div>
 </div>
-<router-outlet>Loading(加载中)....</router-outlet>
+<router-outlet></router-outlet>
 <app-footer>Loading(加载中)....</app-footer>
 <app-floating-bar>Loading(加载中)....</app-floating-bar>
