--- a/src/app/news-item/news-item.component.html
+++ b/src/app/news-item/news-item.component.html
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container" *ngIf="item">
   <div class="row">
     <div class="col-md-12">
       <h2 class="text-center">
