--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row about" *ngIf="company">
     <div class="col-12">
-      <p>2006-2013 版权所有 &copy; {{ company.name }} &trade;</p>
+      <p>2006-2013 {{ "COPYRIGHTS" | translate }} &copy; {{ company.name }} &trade;</p>
     </div>
     <div class="col-md-6 col-sm-12 text-left">
       <p>
