--- a/src/app/floating-bar/floating-bar.component.html
+++ b/src/app/floating-bar/floating-bar.component.html
@@ -1,8 +1,8 @@
-<div class="tools d-none d-sm-block">
+<div class="social d-none d-sm-block">
   <div class="btn-group-vertical">
     <a
       type="button"
-      class="btn btn-outline-secondary social"
+      class="btn btn-outline-secondary "
       data-toggle="tooltip"
       data-placement="left"
       data-html="true"
