--- a/src/app/factory/factory.component.html
+++ b/src/app/factory/factory.component.html
@@ -13,7 +13,7 @@
     </div>
     <app-paginator
     url="/factory/page/"
-    hash="{{ hash }}"
+    hash="{{config.hash}}"
     total="{{ total }}"
     columns="{{ columns }}"
     page="{{ page }}"
