--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,9 +38,9 @@
       >
         <img class="d-block w-100" src="{{ item.image }}"/>
         <div class="carousel-caption d-none d-md-block">
-          <h5>{{ item.title | translate }}</h5>
-          <p>{{ item.intro | translate }}</p>
-          <h5>{{ item.state | translate }}</h5>
+          <h5>{{ item.title }}</h5>
+          <p>{{ item.intro }}</p>
+          <h5>{{ item.state }}</h5>
         </div>
       </div>
     </div>
