--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,38 +5,38 @@
       <ul class="navbar-nav mr-auto"></ul>
       <ul class="navbar-nav">
         <li class="nav-item" [ngClass]="{'active': url === 'home'}">
-          <a class="nav-link btn-lg" href="{{hash}}/"
+          <a class="nav-link btn-lg" href="{{config.hash}}/"
             >{{ "NAV-HOME" | translate }}
             <span class="sr-only">(current)</span></a
           >
         </li>
         <li class="nav-item" [ngClass]="{'active': url === 'intro'}">
-          <a class="nav-link btn-lg" href="{{hash}}/intro">{{
+          <a class="nav-link btn-lg" href="{{config.hash}}/intro">{{
             "NAV-INTRO" | translate
           }}</a>
         </li>
         <li class="nav-item" [ngClass]="{'active': url === 'news'}">
-          <a class="nav-link btn-lg" href="{{hash}}/news">{{
+          <a class="nav-link btn-lg" href="{{config.hash}}/news">{{
             "NAV-NEWS" | translate
           }}</a>
         </li>
         <li class="nav-item" [ngClass]="{'active': url === 'product'}">
-          <a class="nav-link btn-lg" href="{{hash}}/product">{{
+          <a class="nav-link btn-lg" href="{{config.hash}}/product">{{
             "NAV-PRODUCTS" | translate
           }}</a>
         </li>
         <li class="nav-item" [ngClass]="{'active': url === 'factory'}">
-          <a class="nav-link btn-lg" href="{{hash}}/factory">{{
+          <a class="nav-link btn-lg" href="{{config.hash}}/factory">{{
             "NAV-FACTORY" | translate
           }}</a>
         </li>
         <li class="nav-item" [ngClass]="{'active': url === 'certificate'}">
-          <a class="nav-link btn-lg" href="{{hash}}/certificate">{{
+          <a class="nav-link btn-lg" href="{{config.hash}}/certificate">{{
             "NAV-CERTIFICATE" | translate
           }}</a>
         </li>
         <li class="nav-item" [ngClass]="{'active': url === 'contact'}">
-          <a class="nav-link btn-lg" href="{{hash}}/contact">{{
+          <a class="nav-link btn-lg" href="{{config.hash}}/contact">{{
             "NAV-CONTACT" | translate
           }}</a>
         </li>
