--- a/src/app/certificate/certificate.component.html
+++ b/src/app/certificate/certificate.component.html
@@ -16,14 +16,14 @@
     </div>
 
     <app-paginator
-    url="/news/page/"
-    hash="{{ hash }}"
-    total="{{ total }}"
-    columns="{{ columns }}"
-    page="{{ page }}"
-    *ngIf = "total > 1"
-  >
-  </app-paginator>
+      url="/news/page/"
+      hash="{{ config.hash }}"
+      total="{{ total }}"
+      columns="{{ columns }}"
+      page="{{ page }}"
+      *ngIf="total > 1"
+    >
+    </app-paginator>
   </div>
   <hr />
 </div>
