--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -17,7 +17,7 @@
         <div class="card-body">
           <h5 class="card-title">{{ item.title }}</h5>
           <p class="card-text">{{ item.intro }}</p>
-          <a href="{{ item.url }}" class="btn btn-primary">购买</a>
+          <a href="{{ item.url }}" class="btn btn-primary">{{"BUY" | translate}}</a>
         </div>
       </div>
     </div>
