separate resources from vendor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,8 +55,8 @@
         <div class="row">
           <div class="col">
             <p>
-              {{ intro.context }}
-              (<a href="{{ intro.url }}">{{ "INTRO-FULL" | translate }}</a>)
+              {{ intro.content }}
+              (<a href="{{ config.hash }} {{ intro.details }}">{{ "INTRO-FULL" | translate }}</a>)
             </p>
           </div>
         </div>
