--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -34,7 +34,7 @@
             <th scope="row">{{ contact.map.key }}</th>
             <td>
               <div id="map">
-                <img src="assets/images/map.png" />
+                <img src="{{ contact.map.value }}" />
               </div>
             </td>
           </tr>
