--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,7 +4,7 @@
   </h1>
   <div class="row info">
     <div class="col-12">
-      <table class="table table-borderless" *ngIf="contact">
+      <table class="table table-borderless  d-none d-sm-block" *ngIf="contact">
         <tbody>
           <tr>
             <th scope="row">{{ contact.phone.key }}</th>
@@ -40,6 +40,52 @@
           </tr>
         </tbody>
       </table>
+      <ul class="d-block d-sm-none" *ngIf="contact">
+        <li>
+          <ul>
+            <li>{{ contact.phone.key }}</li>
+            <li>{{ contact.phone.value }}</li>
+          </ul>
+        </li>
+        <li>
+          <ul>
+            <li>{{ contact.fax.key }}</li>
+            <li>{{ contact.phone.value }}</li>
+          </ul>
+        </li>
+        <li>
+          <ul>
+            <li>{{ contact.address.key }}</li>
+            <li>{{ contact.address.value }}</li>
+          </ul>
+        </li>
+        <li>
+          <ul>
+            <li>{{ contact.email.key }}</li>
+            <li>{{ contact.email.value }}</li>
+          </ul>
+        </li>
+        <li>
+          <ul>
+            <li>{{ contact.homepage.key }}</li>
+            <li>
+              <a href="{{ contact.homepage.value }}">{{
+                contact.homepage.value
+              }}</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <ul>
+            <li>{{ contact.map.key }}</li>
+            <li>
+              <div id="map">
+                <img id="map-image" src="{{ contact.map.value }}" />
+              </div>
+            </li>
+          </ul>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
