--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -1,5 +1,3 @@
-@import "../column.scss";
-
 
 caption {
   caption-side: initial;;
@@ -20,3 +18,7 @@ caption {
     // height: 300px;
   }
 }
+
+@import "../column.scss";
+
+@import "../app.component.mobile.scss";
