--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -7,7 +7,7 @@
       </p>
     </div>
     <div class="col-12">
-      <table class="table table-borderless d-none d-sm-block" *ngIf="intro">
+      <table class="table table-borderless table-responsive d-none d-sm-block" *ngIf="intro">
         <caption>
           {{
             intro.company
