--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -3,16 +3,17 @@
   img {
     margin-right: 1rem;
     margin-top: 1rem;
-    margin-bottom:  1.5rem;
+    margin-bottom: 1.5rem;
   }
 }
 
-.about {
+.footer {
   text-align: center;
   background-color: #333;
   color: white;
   padding: 20px 0px 0px 0px;
   margin: 0;
+  margin-top: 10px;
   fa-icon {
     display: inline-block;
     width: 30px;
@@ -20,7 +21,24 @@
   }
   span {
     display: inline-block;
-    width: 100px;
+    width: 140px;
+    margin-right: 5px;
     text-align: right;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .footer {
+    p {
+      color: #ccc;
+      fa-icon {
+        color: #F33;
+      }
+      span {
+        display: block;
+        text-align: left;
+        color: #fff;
+      }
+    }
   }
 }
