--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,29 @@
 <div class="container">
   <h1 class="border-left">
+    <a name="production"></a>{{ "NAV-PRODUCTS" | translate }}
+  </h1>
+  <div class="row">
+    <div
+      class="col-sm-12 col-md-4 text-center"
+      *ngFor="let item of products; let i = index"
+    >
+      <div class="card" [ngClass]="{ active: i == 0 }">
+        <img
+          src="{{ item.image }}"
+          class="card-img-top"
+          alt="{{ item.title }}"
+        />
+        <div class="card-body">
+          <h5 class="card-title">{{ item.title }}</h5>
+          <p class="card-text">{{ item.intro }}</p>
+          <a href="{{ item.url }}" class="btn btn-primary">{{"BUY" | translate}}</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <h1 class="border-left">
     <a name="news"></a>{{ "NAV-NEWS" | translate }}
   </h1>
   <div class="row">
@@ -16,51 +40,5 @@
         </tr>
       </tbody>
     </table>
-  </div>
-</div>
-<div class="container">
-  <h1 class="border-left">
-    <a name="production"></a>{{ "NAV-PRODUCTS" | translate }}
-  </h1>
-  <div id="carouselPRODUCTS" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselPRODUCTS" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselPRODUCTS" data-slide-to="1"></li>
-      <li data-target="#carouselPRODUCTS" data-slide-to="2"></li>
-      <li data-target="#carouselPRODUCTS" data-slide-to="3"></li>
-      <li data-target="#carouselPRODUCTS" data-slide-to="4"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div
-        class="carousel-item production-item"
-        *ngFor="let item of products; let i = index"
-        [ngClass]="{ active: i == 0 }"
-      >
-        <img class="d-block w-100" src="{{ item.image }}"/>
-        <div class="carousel-caption d-none d-md-block">
-          <h5>{{ item.title }}</h5>
-          <p>{{ item.intro }}</p>
-          <h5>{{ item.state }}</h5>
-        </div>
-      </div>
-    </div>
-    <a
-      class="carousel-control-prev"
-      href="#carouselPRODUCTS"
-      role="button"
-      data-slide="prev"
-    >
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a
-      class="carousel-control-next"
-      href="#carouselPRODUCTS"
-      role="button"
-      data-slide="next"
-    >
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
 </div>
