--- a/src/app/news-item/news-item.component.html
+++ b/src/app/news-item/news-item.component.html
@@ -4,10 +4,10 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="{{ hash }}/">{{ "NAV-HOME" | translate }}</a>
+            <a href="{{ config.hash }}/">{{ "NAV-HOME" | translate }}</a>
           </li>
           <li class="breadcrumb-item">
-            <a href="{{ hash }}/news/page/{{ page }}">{{
+            <a href="{{ config.hash }}/news/page/{{ page }}">{{
               "NAV-NEWS" | translate
             }}</a>
           </li>
